# vpn-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  system_prompt.txt
.github/workflows/: docker-publish.yml
migrations/: 001_support_chats.sql  002_email_verification.sql  003_email_notifications.sql  004_first_purchase_bonus.sql  005_payments_log.sql  006_support_chat_attachments.sql  007_device_tokens.sql  008_news_media.sql  009_broadcasts.sql  010_grants_default.sql  010_web_push_subscriptions.sql  011_payment_method_shop.sql  012_trial_last_hour_notified.sql
src/: email.rs  jwt.rs  lib.rs  main.rs  models.rs  proxy.rs  push.rs  push_web.rs  web_handlers.rs
tests/: push_web_test.rs
