[package]
name = "vpn-api"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = { version = "4.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
sqlx = { version = "0.7", features = [
        "postgres", 
        "runtime-tokio-native-tls",
        "uuid",
        "chrono"
    ]}
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
lazy_static = "1.4.0"
log = "0.4"
env_logger = "0.11"